force-app/main/default/objects/GoogleCalendarAuth__c/GoogleCalendarAuth__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Google Calendar Auth</label>
</CustomObject>