force-app/main/default/objects/GoogleCalendarAuth__c/fields/CalendarId__c.field-meta.xml
<CustomField>
    <fullName>CalendarId__c</fullName>
    <description>Projects calendar ID where Events will be created.</description>
    <inlineHelpText>Projects calendar ID where Events will be created.</inlineHelpText>
    <label>Calendar ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>