force-app/main/default/objects/GoogleCalendarAuth__c/fields/LastSyncDate__c.field-meta.xml
<CustomField>
    <fullName>LastSyncDate__c</fullName>
    <description>Last sync with Google Calendar.</description>
    <inlineHelpText>Last sync with Google Calendar.</inlineHelpText>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>