force-app/main/default/objects/GoogleCalendarAuth__c/fields/TokenExpireDate__c.field-meta.xml
<CustomField>
    <fullName>TokenExpireDate__c</fullName>
    <label>Token Expire Date</label>
    <type>DateTime</type>
</CustomField>