force-app/main/default/objects/GoogleCalendarAuth__c/fields/TokenType__c.field-meta.xml
<CustomField>
    <fullName>TokenType__c</fullName>
    <label>Token Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>